# personalcode

./: .gitignore  playfair.py  saves.ini  test.txt  untitled.py  vsc.code-workspace
Bash/: test.txt  wait.c
C/: Binary_search.c  Bubble_Sort.c  C.kdev4  Editor.c  Fact.c  HW.c  Insertin_of_sub  Insertin_of_sub.c  Linear_search.c  Makefile.win  Oddnum.c  Prime.c  llist.c  queue.c  shell.c  stack.c  test.c  text.c  try.c  trys.c
C++/: main.cpp  need.txt  text.cpp
C++/test/cl/: CMakeLists.txt  main.cpp
C++/test/fmtt/: CmakeLists.txt  main.cpp
C++/test/p1/: CMakeLists.txt  main.cpp
C++/test/p2/: CMakeLists.txt  main.cpp
C++/test/p3/: CMakeLists.txt  main.cpp
C++/test/p4/: CMakeLists.txt  main.cpp
C++/test/p5/: CMakeLists.txt  main.cpp
C++/test/wxp/: CMakeLists.txt  main.cpp
Go/: animal.go  bubblesort.go  displacement.go  file.go  findian.go  gui.go  main.go  makejson.go  merge_sort.go  names.txt  newanimal.go  philo.go  r.go  read.go  routines.go  slice.go  test.css  test.go  trunc.go
Go/bookmanagement/cmd/main/: main.go
Go/bookmanagement/pkg/config/: app.go
Go/bookmanagement/pkg/models/: book.go
Go/bookmanagement/pkg/routes/: bookstore-routes.go
Go/bookmanagement/pkg/utils/: utils.go
Go/mus/: main.go
Java/: BankDemo.ctxt  BankDemo.java  BankingDemo.java  BoundedW.ctxt  BoundedW.java  DemoViewer.java  GFG.java  GenMeth.ctxt  GenMeth.java  Gpane.java  HelloFX.java  TP.java  WildCardD.ctxt  WildCardD.java  abm.java  comp.ctxt  comp.java  file1.txt  final.java  fx.java  genc.java  ifAlert.java  jfinal.java  multirunmesage.ctxt  multirunmesage.java  package.bluej  shapem.ctxt  shapem.java  test.java  test1.java
Java/.ecode/: project_build.json
Java/Class/: Genifdemo.ctxt  Genifdemo.java  package.bluej
Java/Currency_Conv/: package.bluej
Java/Currency_Conv/src/: Main.java  package.bluej
Java/fx/: pom.xml
Javascript/: bpsk_bertool.mdl  first.js  license.txt
PHP/: main.php
PYTHON/: AES.py  Comparison.py  DES.py  ECC.py  Elgamel.py  RSA.py  Tkinter.py  Untitled-1.py  annn.py  bot.py  bot.txt  bruteforceaffine.py  graph.py  gui.py  gundamzbot.py  hellman.py  image.py  knownplaintext.py  max.py  perform.py  player.py  playfair.py  q3.py  q4.py  saves.ini  speedtest.py  tempCodeRunnerFile.py  test.py  test.txt  tetris.py  texteditor.py  texteditor.spec  top.py  tts.py  tut.py  web.py
PYTHON/IS_project/: ECC.py  bot.py  bot2.py  ecct.py  mail.py  mailt.py  mongodb.py  private.pem  public.pem  qr.py  qr2.py  test.py
PYTHON/project/: adduser.py  bot.py  connect.py  dashboard.py  login.py
Project/SpotifyClone/: index.html  script.js  style.css
React/ecom/: package-lock.json  package.json
React/ecom/src/: App.css  App.jsx  index.css
React/ecom/src/components/: Header.jsx
React/ecom/src/pages/: About.css  About.jsx  Create.jsx  Home.jsx  Login.jsx  User.jsx
Rust/audioGetImage/src-tauri/: Cargo.toml  tauri.conf.json
Rust/audio_image/: Cargo.toml
Rust/audio_image/src/: main.rs
Rust/cipher/src/: main.rs
Rust/main/: Cargo.toml
Rust/main/src/: main.rs
Rust/music/: Cargo.toml
Rust/music/src/: main.rs
Rust/new/: Cargo.toml
Rust/new/src/: main.rs
Rust/simplegui/: Cargo.toml
Rust/simplegui/src/: main.rs
